[tool.poetry]
name = "cpflow"
version = "0.1.0"
description = "Variational synthesis of quantum circuits with coherent multi-start optimization"
authors = ["Nikita Nemkov"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.5"
jax = "0.3.0"
jaxlib = "0.3.0"
qiskit = "0.20.0"
dill = "^0.3.4"
hyperopt = "^0.2.7"
tqdm = "^4.64.0"
optax = "0.1.1"
chex = "0.1.0"
matplotlib = "^3.5.1"
#requests = { git = "https://github.com/LNoorl/qiskit-terra.git@feature/sk-pass" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
